--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 .idea/4crawl.iml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
+log.txt
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/profiles_settings.xml
