--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-.idea/workspace.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/4crawl.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
-log.txt
-.idea/markdown-navigator.xml
-.idea/markdown-navigator/profiles_settings.xml
 dl/
+index.json
